<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <ImageView
        android:id="@+id/imageView3" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/list_main_bg" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/list_bot_bg" />

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/list_top" />

        <EditText
            android:id="@+id/create_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_lastname"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_button"
            android:padding="5dp"
            android:text="@string/create_button"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/create_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_email"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:hint="@string/hint_password"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/create_subject1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_password"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:hint="@string/hint_subject1"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/create_subject2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_subject1"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:hint="@string/hint_subject2"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/create_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/required_title"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/hint_firstname"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/create_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_firstname"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/hint_lastname"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/create_subject3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_subject2"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:hint="@string/hint_subject3"
            android:textColor="@color/white"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/create_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_email"
            android:gravity="center"
            android:layout_centerHorizontal="true" />

     

        <TextView
            android:id="@+id/required_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_below="@+id/imageView1"
            android:layout_alignLeft="@+id/create_firstname"
            android:layout_alignRight="@+id/create_firstname"
            android:text="@string/required"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/create_show_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/create_lastname"
            android:layout_alignBottom="@+id/create_lastname"
            android:gravity="center"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>