<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <ImageView
        android:id="@+id/imageView3" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/list_main_bg" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/list_bot_bg" />

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:background="@android:color/transparent"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/list_top" />

       <TextView
           android:id="@+id/last_user_label"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_centerHorizontal="true"
           android:layout_marginLeft="19dp"
           android:layout_marginTop="31dp"
           android:text="@string/last_user_created"
           android:textStyle="bold" />

        <TextView
            android:id="@+id/last_appointment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_user_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="51dp"
            android:text="@string/last_changed_appointment"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/last_appointment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_appointment_label"
            android:layout_centerHorizontal="true"
            android:text="@string/loading"
            />

        <TextView
            android:id="@+id/last_user_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_user_label"
            android:layout_centerHorizontal="true"
            android:text="@string/loading"
             />

        <TextView
            android:id="@+id/teacherCountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userCountLabel"
            android:layout_toLeftOf="@+id/last_appointment_label"
            android:text="@string/teacher_count"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userCountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/teacherCountLabel"
            android:layout_below="@+id/last_appointment_date"
            android:layout_marginTop="34dp"
            android:text="@string/user_count"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/userCountLabel"
            android:layout_alignBottom="@+id/userCountLabel"
            android:layout_alignLeft="@+id/last_appointment_label"
            android:layout_marginLeft="15dp"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/teacherCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/userCount"
            android:layout_below="@+id/userCount"
            android:text="@string/loading" />

    <TextView
        android:id="@+id/txtuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teacherCount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/appointCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/teacherCountLabel"
        android:layout_below="@+id/teacherCountLabel"
        android:text="@string/app_count"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appointCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/teacherCount"
        android:layout_below="@+id/teacherCount"
        android:text="@string/loading" />

    </RelativeLayout>

</RelativeLayout>