<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:src="@drawable/login_top_bg" />

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:background="@drawable/login_main_bg"
        android:orientation="horizontal" >

         <Button
             android:id="@+id/login"
             android:layout_width="217dp"
             android:layout_height="39dp"
             android:layout_alignLeft="@+id/password_signup_field"
             android:layout_alignParentBottom="true"
             android:layout_alignRight="@+id/password_signup_field"
             android:layout_marginBottom="16dp"
             android:background="@drawable/custom_button"
             android:text="@string/login_button"
             android:textColor="@color/white" />

         <EditText
             android:id="@+id/password_signup_field"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:background="@drawable/custom_edittext"
             android:ems="10"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:textColor="@color/white"
             android:gravity="center_horizontal"
             android:textCursorDrawable="@null"/>

         <EditText
             android:id="@+id/username_signup_field"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_above="@+id/password_signup_field"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="12dp"
             android:background="@drawable/custom_edittext"
             android:ems="10"
             android:hint="@string/username"
             android:inputType="text|textEmailAddress"
             android:textColor="@color/white" 
             android:gravity="center_horizontal"
             android:textCursorDrawable="@null">
 		<requestFocus />
 		</EditText>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:src="@drawable/login_bot_bg" />

    <TextView
        android:id="@+id/signup_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/signup_button"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/titleBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="parenTIME"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/titleSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleBig"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-8dp"
        android:text="Sprechstundenverwaltung"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

</RelativeLayout>