<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center" >
    
    <ImageView
        android:id="@+id/account_title_background"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_account_bg"
        android:scaleType="centerCrop"
        android:src="@drawable/acc_bg" />

    <TextView
        android:id="@+id/appointments_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/profile_lastname"
        android:layout_marginRight="33dp"
        android:paddingRight="18dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/subjecttxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/nametxt"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="13dp"
        android:paddingRight="18dp"
        android:text="@string/appointments"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/nametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/surnametxt"
        android:layout_alignBottom="@+id/surnametxt"
        android:layout_alignLeft="@+id/subjecttxt"
        android:text="@string/appointments"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/surnametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appointments_number"
        android:layout_marginLeft="11dp"
        android:layout_toRightOf="@+id/nametxt"
        android:text="@string/appointments"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:typeface="serif" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/account_title_background"
        android:background="@color/white" >

    </ListView>

 <TextView
     android:id="@+id/notimelisttxt"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
     android:gravity="center_horizontal"
     android:text="@string/nolistview"
     android:textAppearance="?android:attr/textAppearanceLarge"
     android:visibility="invisible" />

</RelativeLayout>